--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                                                     <p class="designation">Product Management of <span>Invision App Inc</span></p>
                                                 </div>
                                             </div>
-                                            <p>“Drake was a real pleasure to work with and we look 
+                                            <p>“Vijay was a real pleasure to work with and we look 
                                                 forward to working with him again. He's definitely the kind of 
                                                 designer that you can trust with any project from A-Z.”</p>
         
@@ -594,7 +594,7 @@
                                                     <p class="designation">Director of <span>Envato LLC</span></p>
                                                 </div>
                                             </div>
-                                            <p>“Extremely profressional and fast service!. Drake is a master
+                                            <p>“Extremely profressional and fast service!. Vijay is a master
                                                 of code and he also very creative. We done 3 projects with
                                                 him and certain will continue.”</p>
         
